@@ -89,3 +89,12 @@
 
 ## GC logging
 -Xlog:gc*,gc+age=trace,safepoint:file=gc.log:utctime,level,pid,tags:filecount=32,filesize=64m
+
+## Arrow
+# Allow accessing a private field of java.nio.Buffer for direct memory access.
+# See org.apache.arrow.memory.MemoryUtil and https://arrow.apache.org/docs/java/install.html
+# See also libs/arrow/src/main/java/module-info.java-disabled for why we open to ALL-UNNAMED
+# instead of limiting to org.apache.arrow.memory.core
+--add-opens=java.base/java.nio=ALL-UNNAMED
+# Define the allocation manager type to avoid classpath scanning to locate one.
+-Darrow.allocation.manager.type=Unsafe
